--- a/docker-compose/supabase/docker-compose.yml
+++ b/docker-compose/supabase/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     container_name: supabase-studio
     image: supabase/studio:2025.06.02-sha-8f2993d
     ports: 
-      - "3000:3000"  
+      - "127.0.0.1:3000:3000"  
     restart: unless-stopped
     healthcheck:
       test:
@@ -56,8 +56,8 @@ services:
     image: kong:2.8.1
     restart: unless-stopped
     ports:
-      - ${KONG_HTTP_PORT}:8000/tcp
-      - ${KONG_HTTPS_PORT}:8443/tcp
+      - 127.0.0.1:${KONG_HTTP_PORT}:8000/tcp
+      - 127.0.0.1:${KONG_HTTPS_PORT}:8443/tcp
     volumes:
       # https://github.com/supabase/supabase/issues/12661
       - ./volumes/api/kong.yml:/home/kong/temp.yml:ro,z
@@ -343,7 +343,7 @@ services:
     image: supabase/logflare:1.14.2
     restart: unless-stopped
     ports:
-      - 4000:4000
+      - 127.0.0.1:4000:4000
     # Uncomment to use Big Query backend for analytics
     # volumes:
     #   - type: bind
@@ -480,8 +480,8 @@ services:
     image: supabase/supavisor:2.5.1
     restart: unless-stopped
     ports:
-      - ${POSTGRES_PORT}:5432
-      - ${POOLER_PROXY_PORT_TRANSACTION}:6543
+      - 127.0.0.1:${POSTGRES_PORT}:5432
+      - 127.0.0.1:${POOLER_PROXY_PORT_TRANSACTION}:6543
     volumes:
       - ./volumes/pooler/pooler.exs:/etc/pooler/pooler.exs:ro,z
     healthcheck:
