--- a/docker-compose/container-registry/docker-compose.yml
+++ b/docker-compose/container-registry/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       networks:
         - supabase
 
-  networks:
-    supabase:
-      external: true
+networks:
+  supabase:
+    name: supabase_default
+    external: true
