--- a/docker-compose/container-registry/docker-compose.yml
+++ b/docker-compose/container-registry/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       environment:
         - REGISTRY_AUTH=htpasswd
         - REGISTRY_AUTH_HTPASSWD_PATH=/auth/htpasswd
+        - REGISTRY_AUTH_HTPASSWD_REALM=Registry Realm
       networks:
         - supabase
 
