--- a/docker-compose/n8n/docker-compose.yml
+++ b/docker-compose/n8n/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       N8N_ENCRYPTION_KEY: ${N8N_ENCRYPTION_KEY}
       APIFY_API_KEY: ${APIFY_API_KEY}
       BROWSERLESS_TOKEN: ${BROWSERLESS_TOKEN}
+      MCP_BEARER_TOKEN: ${MCP_BEARER_TOKEN}
       GENERIC_TIMEZONE: ${GENERIC_TIMEZONE}
       N8N_RUNNERS_ENABLED: ${N8N_RUNNERS_ENABLED}
       N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: ${N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS}
