--- a/docker-compose/ai-dev-server/docker-compose.yml
+++ b/docker-compose/ai-dev-server/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - N8N_BASE_URL=${N8N_BASE_URL}
       - N8N_API_KEY=${N8N_API_KEY}
       - HOST_AGENT_BEARER_TOKEN=${HOST_AGENT_BEARER_TOKEN}
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
       
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
