--- a/docker-compose/ai-dev-server/docker-compose.yml
+++ b/docker-compose/ai-dev-server/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - N8N_BASE_URL=${N8N_BASE_URL}
       - N8N_API_KEY=${N8N_API_KEY}
       - HOST_AGENT_BEARER_TOKEN=${HOST_AGENT_BEARER_TOKEN}
+      - BASE_URL=https://ai-dev.correlion.ai
+      - OAUTH_CLIENT_SECRET=${OAUTH_CLIENT_SECRET}
     extra_hosts:
       - "host.docker.internal:host-gateway"
       
