--- a/ai-dev-server/pyproject.toml
+++ b/ai-dev-server/pyproject.toml
@@ -8,4 +8,7 @@ dependencies = [
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.30.0",
     "httpx>=0.24.0",
+    "langchain>=0.3.27",
+    "langchain-anthropic>=0.3.19",
+    "langchain-google-genai>=2.1.10",
 ]
