--- a/ai-dev-server/pyproject.toml
+++ b/ai-dev-server/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "langchain>=0.3.27",
     "langchain-anthropic>=0.3.19",
     "langchain-google-genai>=2.1.10",
+    "langgraph>=0.6.6",
 ]
