modify endpoint naming

--- a/ai-dev-server/.env.example
+++ b/ai-dev-server/.env.example
@@ -14,8 +14,8 @@ LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 LANGSMITH_API_KEY=your-langsmith-api-key-here
 LANGSMITH_PROJECT=ai-dev-server
 
-# OpenAI-Compatible API for 11Labs
-OPENAI_COMPATIBLE_API_KEY=sk-your-custom-key-here
+# Multi-Agent API Key for 11Labs Integration
+MULTI_AGENT_API_KEY=sk-your-custom-key-here
 
 # OAuth (if needed)
 OAUTH_CLIENT_SECRET=your-oauth-client-secret-here
