Fix Dockerfile to copy multi_agent files
- Add multi_agent_models.py and multi_agent_endpoint.py to COPY
- Add multi-agent/ directory to COPY
- Fixes ModuleNotFoundError in container

--- a/ai-dev-server/Dockerfile
+++ b/ai-dev-server/Dockerfile
@@ -16,7 +16,8 @@ COPY pyproject.toml uv.lock* ./
 RUN uv sync --frozen
 
 # Copy application code
-COPY server.py ./
+COPY server.py multi_agent_models.py multi_agent_endpoint.py ./
+COPY multi-agent/ ./multi-agent/
 
 # Expose port
 EXPOSE 8080
