adapting docker compose for multi agent

--- a/docker-compose/ai-dev-server/.env.example
+++ b/docker-compose/ai-dev-server/.env.example
@@ -1,12 +1,2 @@
 # AI Dev Server Environment Variables
-# Copy this to .env and configure with your values
-
-# MCP Authentication
-MCP_BEARER_TOKEN=your_mcp_bearer_token_here
-
-# N8N Configuration  
-N8N_BASE_URL=https://n8n.yourdomain.com
-N8N_API_KEY=your_n8n_api_key_here
-
-# HostAgent Authentication (for backup operations)
-HOST_AGENT_BEARER_TOKEN=your_host_agent_token_here
+# Example is in ai-dev-server directory, so that we can run the server from there too. 
