--- a/docker-compose/ai-dev-server/docker-compose.yml
+++ b/docker-compose/ai-dev-server/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       - N8N_BASE_URL=${N8N_BASE_URL}
       - N8N_API_KEY=${N8N_API_KEY}
       - HOST_AGENT_BEARER_TOKEN=${HOST_AGENT_BEARER_TOKEN}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - MULTI_AGENT_API_KEY=${MULTI_AGENT_API_KEY}
+      - LANGSMITH_TRACING=${LANGSMITH_TRACING}
+      - LANGSMITH_ENDPOINT=${LANGSMITH_ENDPOINT}
+      - LANGSMITH_API_KEY=${LANGSMITH_API_KEY}
+      - LANGSMITH_PROJECT=${LANGSMITH_PROJECT}
     extra_hosts:
       - "host.docker.internal:host-gateway"
       
